[ADD] aligned spacing of main content w/ header on mobile, translation adjustments, fixed model import, renamed post-overview.service to post.service

--- a/src/app/features/header/components/blog-overview/blog-overview.component.scss
+++ b/src/app/features/header/components/blog-overview/blog-overview.component.scss
@@ -6,7 +6,6 @@
 
 .blog-overview-field {
     font-size: $large-font-size;
-    margin-left: 1em;
     width: 50%;
 
     @media only screen and (max-width: $md) {
